@@ -59,7 +59,14 @@
         
         <dependency>
             <groupId>org.rhq</groupId>
-            <artifactId>rhq-scripting-python</artifactId>
+            <artifactId>rhq-scripting-javascript</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>rhq-core-client-api</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
@@ -107,8 +114,104 @@
             <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- 3rd Party Deps -->
+
+        <!-- required by RHQ server classes, as well as EJB3 Embedded -->
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1-jboss</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>hibernate</groupId>
+            <artifactId>hibernate3</artifactId>
+            <!-- NOTE: The version is defined in the root POM's dependencyManagement 
+                section. -->
+            <scope>provided</scope> <!-- by JBossAS -->
+        </dependency>
+
+        <dependency>
+            <groupId>hibernate-annotations</groupId>
+            <artifactId>hibernate-annotations</artifactId>
+            <!-- NOTE: The version is defined in the root POM's dependencyManagement 
+                section. -->
+            <scope>provided</scope> <!-- by JBossAS -->
+        </dependency>
+
+        <dependency>
+            <groupId>hibernate-entitymanager</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.4</version>
+            <scope>provided</scope> <!-- by JBossAS -->
+        </dependency>
         
-        <!-- We'll try remote connections using JNP -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope> <!-- by JBossAS -->
+        </dependency>
+
+        <dependency>
+            <groupId>jboss</groupId>
+            <artifactId>jboss-annotations-ejb3</artifactId>
+            <!-- NOTE: The version is defined in the root POM's dependencyManagement 
+                section. -->
+            <scope>provided</scope> <!-- by JBossAS -->
+        </dependency>
+
+        <!-- includes the org.jboss.ejb3.StrictMaxPool class, which is needed 
+            by the PoolClass annotation used on some of our SLSB's -->
+        <dependency>
+            <groupId>jboss</groupId>
+            <artifactId>jboss-ejb3</artifactId>
+            <!-- NOTE: The version is defined in the root POM's dependencyManagement 
+                section. -->
+            <scope>provided</scope> <!-- by JBossAS -->
+        </dependency>
+
+        <!-- for the transaction interrupt EJB3 interceptor -->
+        <dependency>
+            <groupId>org.jboss.transaction</groupId>
+            <artifactId>jboss-jta</artifactId>
+            <!-- NOTE: The version is defined in the root POM's dependencyManagement 
+                section. -->
+            <scope>provided</scope> <!-- by JBossAS -->
+        </dependency>
+
+        <dependency>
+            <groupId>org.opensymphony.quartz</groupId>
+            <artifactId>quartz</artifactId>
+            <!-- NOTE: The version is defined in the root POM's dependencyManagement 
+                section. -->
+            <scope>provided</scope> <!-- by JBossAS itself, which the container build has packaged with 1.6.5 -->
+        </dependency>
+
+        <dependency>
+            <groupId>org.opensymphony.quartz</groupId>
+            <artifactId>quartz-oracle</artifactId>
+            <!-- NOTE: The version is defined in the root POM's dependencyManagement 
+                section. -->
+            <scope>provided</scope> <!-- by JBossAS itself, which the container build has packaged with 1.6.5 -->
+        </dependency>
+
+        <!-- This is needed cglib which is in turn needed by hibernate -->
+
         <dependency>
            <groupId>jboss</groupId>
            <artifactId>jnp-client</artifactId>
@@ -207,6 +310,12 @@
                         <jnp.port>${jnp.port}</jnp.port>
                         <jnp.rmiPort>${jnp.rmiPort}</jnp.rmiPort>
                     </systemPropertyVariables>
+                    <argLine>${jacoco.unit-test.args} -Djava.security.manager -Djava.security.policy==${basedir}/target/test-classes/security.policy</argLine>
+                    <additionalClasspathElements>
+                        <!-- The below is required for tests to run against 
+                            Oracle. -->
+                        <additionalClasspathElement>${settings.localRepository}/com/oracle/ojdbc6/${ojdbc6.version}/ojdbc6-${ojdbc6.version}.jar</additionalClasspathElement>
+                    </additionalClasspathElements>
                 </configuration>
             </plugin>
 
